--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SistemaDeSaude
+application.vendor=debian
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,11 +33,34 @@ dist.jar=${dist.dir}/SistemaDeSaude.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaDeSaude
+endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=lib/commons-beanutils-1.9.4.jar
+file.reference.commons-collections4-4.4.jar=lib/commons-collections4-4.4.jar
+file.reference.commons-digester-2.1.jar=lib/commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
+file.reference.jasperreports-7.0.1.jar=lib/jasperreports-7.0.1.jar
+file.reference.jasperreports-data-adapters-7.0.1.jar=lib/jasperreports-data-adapters-7.0.1.jar
+file.reference.jasperreports-excel-poi-7.0.1.jar=lib/jasperreports-excel-poi-7.0.1.jar
+file.reference.jasperreports-fonts-7.0.1.jar=lib/jasperreports-fonts-7.0.1.jar
+file.reference.jasperreports-javaflow-7.0.1.jar=lib/jasperreports-javaflow-7.0.1.jar
+file.reference.jasperreports-jdt-7.0.1.jar=lib/jasperreports-jdt-7.0.1.jar
+file.reference.jasperreports-pdf-7.0.1.jar=lib/jasperreports-pdf-7.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MyLibrary.classpath}
+    ${libs.MyLibrary.classpath}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.jasperreports-7.0.1.jar}:\
+    ${file.reference.jasperreports-fonts-7.0.1.jar}:\
+    ${file.reference.jasperreports-javaflow-7.0.1.jar}:\
+    ${file.reference.jasperreports-jdt-7.0.1.jar}:\
+    ${file.reference.jasperreports-pdf-7.0.1.jar}:\
+    ${file.reference.jasperreports-excel-poi-7.0.1.jar}:\
+    ${file.reference.jasperreports-data-adapters-7.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
